LOGCXX-175: APRCharsetEncoder synchronization